Fix The composite key of domains should be immutable #154